--- a/pages/team.html
+++ b/pages/team.html
@@ -92,7 +92,7 @@
     </div>
 
     <div class="member">
-      <img src="https://via.placeholder.com/150" alt="Member 4 Photo">
+      <img src="..\docs\RosterPhotos\ElijahProfilePictureSWE1.jpg" alt="Member 4 Photo">
       <h2>Elijah Miles</h2>
       <h2>Role #4</h2>
       <p><a href="mailto:elijah_miles@student.uml.edu">elijah_miles@student.uml.edu</a></p>
