--- a/pages/team.html
+++ b/pages/team.html
@@ -71,7 +71,7 @@
       <img src="..\docs\RosterPhotos\chrisProjectPhoto.png" alt="Member 1 Photo">
       <h2>Chris Peters</h2>
       <h2>Role #1</h2>
-      <h4>cpetersjr@gmail.com</h4>
+      <h4><a href="mailto:cpetersjr@gmail.com">cpetersjr@gmail.com</a></h4>
       <a href="https://www.linkedin.com/in/peterscp/">View Profile</a>
     </div>
 
@@ -79,7 +79,7 @@
       <img src="..\docs\RosterPhotos\MaxProjectPhoto.jpg" alt="Member 2 Photo">
       <h2>Max Fitzgerald</h2>
       <h2>Role #2</h2>
-      <h4>MxFz03@gmail.com</h4>
+      <h4><a href="mailto:MxFz03@gmail.com">MxFz03@gmail.com</a></h4>
       <a href="https://www.linkedin.com/in/maxafitzgerald">View Profile</a>
     </div>
 
@@ -87,7 +87,7 @@
       <img src="..\docs\RosterPhotos\ShkambPrjectImage.jpg" alt="Member 3 Photo">
       <h2>Shkamb Tafarshiku</h2>
       <h2>Role #3</h2>
-      <h4>shkambtafarshiku@gmail.com</h4>
+      <h4><a href="mailto:shkambtafarshiku@gmail.com">shkambtafarshiku@gmail.com</a></h4>
       <a href="https://www.linkedin.com/in/shkamb-tafarshiku-89698229a">View Profile</a>
     </div>
 
@@ -95,8 +95,8 @@
       <img src="..\docs\RosterPhotos\ElijahProfilePictureSWE1.jpg" alt="Member 4 Photo">
       <h2>Elijah Miles</h2>
       <h2>Role #4</h2>
-      <p><a href="mailto:elijah_miles@student.uml.edu">elijah_miles@student.uml.edu</a></p>
-      <a href="member4.html">View Profile</a>
+      <h4><a href="mailto:elijah_miles@student.uml.edu">elijah_miles@student.uml.edu</a></h4>
+      <a href="https://www.linkedin.com/in/elijahmiles/">View Profile</a>
     </div>
   </div>
 
