--- a/pages/team.html
+++ b/pages/team.html
@@ -98,7 +98,14 @@
       <h4><a href="mailto:elijah_miles@student.uml.edu">elijah_miles@student.uml.edu</a></h4>
       <a href="https://www.linkedin.com/in/elijahmiles/">View Profile</a>
     </div>
-  </div>
+    
+    <div class="member">
+      <img src="..\docs\RosterPhotos\ShkambPrjectImage.jpg" alt="Member 3 Photo">
+      <h2>Ebenezer</h2>
+      <h2>Role #5</h2>
+      <h4><a href="mailto:ebenezer_oloyede@student.uml.edu">ebenezer_oloyede@student.uml.edu</a></h4>
+      <a href="www.linkedin.com/in/ebenezer-oloyede-4b9740250">View Profile</a>
+    </div>
 
   <a class="back-link" href="../index.html">← Back to Main Page</a>
 
