Added our roles from the presentation to the team page

--- a/pages/team.html
+++ b/pages/team.html
@@ -70,7 +70,7 @@
     <div class="member">
       <img src="..\docs\RosterPhotos\chrisProjectPhoto.png" alt="Member 1 Photo">
       <h2>Chris Peters</h2>
-      <h2>Role #1</h2>
+      <h2>Project Coordinator</h2>
       <h4><a href="mailto:cpetersjr@gmail.com">cpetersjr@gmail.com</a></h4>
       <a href="https://www.linkedin.com/in/peterscp/">View Profile</a>
     </div>
@@ -78,7 +78,7 @@
     <div class="member">
       <img src="..\docs\RosterPhotos\MaxProjectPhoto.jpg" alt="Member 2 Photo">
       <h2>Max Fitzgerald</h2>
-      <h2>Role #2</h2>
+      <h2>Project Developer</h2>
       <h4><a href="mailto:MxFz03@gmail.com">MxFz03@gmail.com</a></h4>
       <a href="https://www.linkedin.com/in/maxafitzgerald">View Profile</a>
     </div>
@@ -86,7 +86,7 @@
     <div class="member">
       <img src="..\docs\RosterPhotos\ShkambPrjectImage.jpg" alt="Member 3 Photo">
       <h2>Shkamb Tafarshiku</h2>
-      <h2>Role #3</h2>
+      <h2>Project Developer</h2>
       <h4><a href="mailto:shkambtafarshiku@gmail.com">shkambtafarshiku@gmail.com</a></h4>
       <a href="https://www.linkedin.com/in/shkamb-tafarshiku-89698229a">View Profile</a>
     </div>
@@ -94,7 +94,7 @@
     <div class="member">
       <img src="..\docs\RosterPhotos\ElijahProfilePictureSWE1.jpg" alt="Member 4 Photo">
       <h2>Elijah Miles</h2>
-      <h2>Role #4</h2>
+      <h2>Project Developer</h2>
       <h4><a href="mailto:elijah_miles@student.uml.edu">elijah_miles@student.uml.edu</a></h4>
       <a href="https://www.linkedin.com/in/elijahmiles/">View Profile</a>
     </div>
