Cleaned the main page

--- a/index.html
+++ b/index.html
@@ -4,32 +4,86 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Project Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background-color: #f7f9fb;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1 {
+      margin-bottom: 30px;
+    }
+
+    .container {
+      max-width: 800px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      padding: 30px;
+      margin: 0 auto;
+      text-align: left;
+    }
+
+    h2 {
+      margin-top: 25px;
+      color: #222;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 10px 0 25px 0;
+    }
+
+    ul li {
+      margin: 8px 0;
+    }
+
+    a {
+      text-decoration: none;
+      color: #0077cc;
+      font-weight: bold;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <h1>Project Website</h1>
 
-  <h2>Core Pages</h2>
-  <ul>
-    <li><a href="pages/background.html">Project Background &amp; Motivation</a></li>
-    <li><a href="pages/description.html">Project Description</a></li>
-    <li><a href="pages/team.html">Team Roster</a></li>
-  </ul>
+  <h1>PUZZLER</h1>
 
-  <h2>Placeholder Links</h2>
-  <ul>
-    <li><a href="docs/srs.pdf" target="_blank" rel="noopener">SRS</a></li>
-    <li><a href="docs/prototypes/index.html">Prototypes</a></li>
-    <li><a href="docs/demo.html">Demo Video</a></li>
-    <li><a href="docs/bibliography.pdf" target="_blank" rel="noopener">Bibliography</a></li>
-  </ul>
+  <div class="container">
 
-  <h2>Intermediate Items</h2>
-  <ul>
-    <li><a href="docs/original-project-description.pdf" target="_blank" rel="noopener">Original Project Description</a></li>
-    <li><a href="docs/requirements.pdf" target="_blank" rel="noopener">Project Requirements</a></li>
-    <li><a href="docs/usecase-diagram.png" target="_blank" rel="noopener">Use Case Diagram</a></li>
-    <li><a href="docs/class-diagram.png" target="_blank" rel="noopener">Class Diagram</a></li>
-    <li><a href="docs/sequence-diagrams/" target="_blank" rel="noopener">Sequence Diagrams</a></li>
-  </ul>
+    <h2>Core Pages</h2>
+    <ul>
+      <li><a href="pages/background.html">Project Background & Motivation</a></li>
+      <li><a href="pages/description.html">Project Description</a></li>
+      <li><a href="pages/team.html">Team Roster</a></li>
+    </ul>
+
+    <h2>Placeholder Links</h2>
+    <ul>
+      <li><a href="docs/srs.pdf" target="_blank" rel="noopener">SRS</a></li>
+      <li><a href="docs/prototypes/index.html">Prototypes</a></li>
+      <li><a href="docs/demo.html">Demo Video</a></li>
+      <li><a href="docs/bibliography.pdf" target="_blank" rel="noopener">Bibliography</a></li>
+    </ul>
+
+    <h2>Intermediate Items</h2>
+    <ul>
+      <li><a href="docs/original-project-description.pdf" target="_blank" rel="noopener">Original Project Description</a></li>
+      <li><a href="docs/requirements.pdf" target="_blank" rel="noopener">Project Requirements</a></li>
+      <li><a href="docs/usecase-diagram.png" target="_blank" rel="noopener">Use Case Diagram</a></li>
+      <li><a href="docs/class-diagram.png" target="_blank" rel="noopener">Class Diagram</a></li>
+      <li><a href="docs/sequence-diagrams/" target="_blank" rel="noopener">Sequence Diagrams</a></li>
+    </ul>
+
+  </div>
+
 </body>
 </html>
