--- a/pages/team.html
+++ b/pages/team.html
@@ -98,6 +98,15 @@
       <h4><a href="mailto:elijah_miles@student.uml.edu">elijah_miles@student.uml.edu</a></h4>
       <a href="https://www.linkedin.com/in/elijahmiles/">View Profile</a>
     </div>
+
+      <div class="member">
+      <img src="..\docs\RosterPhotos\ebenezer.jpg" alt="Member 5 Photo">
+      <h2>Ebenezer Oloyede</h2>
+      <h2>Project Developer</h2>
+      <h4><a href="mailto:ebenezer_oloyede@student.uml.edu">ebenezer_oloyede@student.uml.edu</a></h4>
+      <a href="www.linkedin.com/in/ebenezer-oloyede-4b9740250">View Profile</a>
+    </div>
+    
   </div>
 
   <a class="back-link" href="../index.html">← Back to Main Page</a>
