Update index.html with new images

--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
       <li><a href="docs/bibliography.pdf" target="_blank" rel="noopener">Bibliography</a></li>
     </ul>
 
-    <h2>Intermediate Items</h2>
-    <ul>
-      <li><a href="docs/original-project-description.pdf" target="_blank" rel="noopener">Original Project Description</a></li>
-      <li><a href="docs/requirements.pdf" target="_blank" rel="noopener">Project Requirements</a></li>
-      <li><a href="docs/usecase-diagram.png" target="_blank" rel="noopener">Use Case Diagram</a></li>
-      <li><a href="docs/class-diagram.png" target="_blank" rel="noopener">Class Diagram</a></li>
-      <li><a href="docs/sequence-diagrams/" target="_blank" rel="noopener">Sequence Diagrams</a></li>
-    </ul>
+   <h2>Intermediate Items</h2>
+   <ul>
+      <li><a href="docs/Usecase-diagram.png" target="_blank">Use Case Diagram</a></li>
+      <li><a href="docs/class.png" target="_blank">Class Diagram</a></li>
+      <li><a href="docs/State-diagram.png" target="_blank">State Diagram</a></li>
+      <li><a href="docs/seq_1.png" target="_blank">Sequence Diagram 1</a></li>
+     <li><a href="docs/seq_2.png" target="_blank">Sequence Diagram 2</a></li>
+   </ul>
 
   </div>
 
