--- a/pages/team.html
+++ b/pages/team.html
@@ -100,7 +100,7 @@
     </div>
 
       <div class="member">
-      <img src="..\docs\RosterPhotos\ebenezer.jpg" alt="Member 5 Photo">
+      <img src="..\docs\RosterPhotos\ebenezer.jpeg" alt="Member 5 Photo">
       <h2>Ebenezer Oloyede</h2>
       <h2>Project Developer</h2>
       <h4><a href="mailto:ebenezer_oloyede@student.uml.edu">ebenezer_oloyede@student.uml.edu</a></h4>
