--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <h2>Placeholder Links</h2>
     <ul>
-      <li><a href="docs/Software Requirements Specification (SRS)_Puzzler.pdf" target="_blank" rel="noopener">SRS</a></li>
+      <li><a href="docs/SRSV2.pdf" target="_blank" rel="noopener">SRS</a></li>
       <li><a href="docs/prototypes/index.html">Prototypes</a></li>
       <li><a href="docs/demo.html">Demo Video</a></li>
       <li><a href="docs/bibliography.pdf" target="_blank" rel="noopener">Bibliography</a></li>
