--- a/index.html
+++ b/index.html
@@ -8,23 +8,35 @@
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      background-color: #f7f9fb;
+      background: linear-gradient(135deg, #0b1e39, #0a1023);
+      background-size: cover;
       margin: 0;
-      padding: 20px;
-    }
+
+      /* Centering the container */
+      display: flex;
+      justify-content: center;
+      min-height: 100vh;
+      flex-direction: column;
 
     h1 {
       margin-bottom: 30px;
     }
 
-    .container {
-      max-width: 800px;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      padding: 30px;
-      margin: 0 auto;
-      text-align: left;
+    .container { 
+      max-width: 800px; 
+      background: #ffffff; 
+      border-radius: 12px; 
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1); 
+      padding: 30px; 
+      margin: 0 auto; 
+      text-align: left; 
+    }
+
+    h1 {
+      font-size: 4em;
+      margin: 0 0 120px 0;
+      margin-top: 25px;
+      color: #ffffff;
     }
 
     h2 {
