Minor changes to index and team

--- a/pages/team.html
+++ b/pages/team.html
@@ -36,7 +36,7 @@
       width: 100%;
     }
 
-    /* This centers the 5th item */
+    /* This centers the 5th member */
     .roster .member:nth-child(5) {
       grid-column: 1 / span 2;
       justify-self: center;
