--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     .container { 
       max-width: 800px; 
-      background: #ffffff; 
+      background: #ffffffcc; 
       border-radius: 12px; 
       box-shadow: 0 2px 8px rgba(0,0,0,0.1); 
       padding: 30px; 
