--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     h1 {
       font-size: 4em;
-      margin: 0 0 80px 0;
-      margin-top: 25px;
+      margin: 0 0 40px 0;
+      margin-top: 40px;
       color: #ffffff;
     }
 
@@ -61,7 +61,6 @@
       text-decoration: underline;
     }
 
-    /* 🔽 Download button styling */
     .download-btn {
       display: inline-block;
       margin: 0 auto 40px auto;
@@ -80,14 +79,51 @@
       transform: scale(1.05);
       background: #0088cc;
     }
+
+    .screenshot-gallery {
+      margin: 40px auto;
+      text-align: center;
+    }
+
+    .screenshots {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 20px;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+
+    .screenshots img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+      transition: transform 0.2s;
+    }
+
+    .screenshots img:hover {
+      transform: scale(1.03);
+    } 
   </style>
 </head>
 <body>
 
   <h1>PUZZLER</h1>
 
-  <!-- 🔽 Placeholder Download Button -->
   <a class="download-btn" href="https://github.com/DeepOceanCobaltBlue/SWE_final.git">Download Game</a>
+
+  <div class="screenshot-gallery">
+    <h2 style="color: white; margin-bottom: 20px;">Game Screenshots</h2>
+
+    <div class="screenshots">
+      <img src="docs/GameScreenShots/Game2.png" alt="Screenshot 1">
+      <img src="docs/GameScreenShots/Game1.png" alt="Screenshot 2">
+      <img src="docs/GameScreenShots/Game3.png" alt="Screenshot 3">
+      <img src="docs/GameScreenShots/Game4.png" alt="Screenshot 4">
+    </div>
+  </div>
+
 
   <div class="container">
 
