--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <h2>Project Documents</h2>
     <ul>
       <li><a href="docs/OriginalSRS.pdf" target="_blank" rel="noopener">SRS</a></li>
-      <li><a href="docs/Puzzler_Presentation">Presentation</a></li>
+      <li><a href="docs/Puzzler_Presentation.pdf">Presentation</a></li>
       <li><a href="docs/demo.html">Demo Video</a></li>
       <li><a href="docs/bibliography.pdf" target="_blank" rel="noopener">Bibliography</a></li>
     </ul>
