--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <h2>Project Documents</h2>
     <ul>
-      <li><a href="docs/OriginalSRS.pdf" target="_blank" rel="noopener">SRS</a></li>
+      <li><a href="docs/SRSV2.pdf" target="_blank" rel="noopener">SRS</a></li>
       <li><a href="docs/Puzzler_Presentation.pdf">Presentation</a></li>
       <li><a href="docs/demo.html">Demo Video</a></li>
       <li><a href="docs/bibliography.pdf" target="_blank" rel="noopener">Bibliography</a></li>
