--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <li><a href="docs/SRSV2.pdf" target="_blank" rel="noopener">SRS</a></li>
       <li><a href="docs/Puzzler_Presentation.pdf">Presentation</a></li>
       <li><a href="docs/demo.html">Demo Video</a></li>
-      <li><a href="docs/bibliography.pdf" target="_blank" rel="noopener">Bibliography</a></li>
+      <li><a href="docs/Bibliography.pdf" target="_blank" rel="noopener">Bibliography</a></li>
     </ul>
 
     <h2>Resources</h2>
