final Update index.html

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <li><a href="docs/State-diagram.png" target="_blank">State Diagram</a></li>
       <li><a href="docs/seq_1.png" target="_blank">Sequence Diagram 1</a></li>
       <li><a href="docs/seq_2.png" target="_blank">Sequence Diagram 2</a></li>
-      <li><a href="docs/OriginalSRS.png" target="_blank">SRS version 1</a></li>
+      <li><a href="docs/OriginalSRS.pdf" target="_blank">SRS version 1</a></li>
     </ul>
 
   </div>
